--- a/eureka-service/pom.xml
+++ b/eureka-service/pom.xml
@@ -28,6 +28,12 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
+        <!--Spring Boot-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <!--Spring Cloud-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
