--- a/eureka-service/pom.xml
+++ b/eureka-service/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>ssl-component</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>ro.rasel</groupId>
+            <artifactId>eureka-client-component</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
 
         <!--Spring Boot-->
         <dependency>
