--- a/security-sso-ui/src/main/resources/application.properties
+++ b/security-sso-ui/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-server.hostname=localhost
+server.hostname=${COMPUTERNAME}
 server.port=8081
+
 spring.profiles.include=security, ssl, sslTrustStore
